# Macroa-Pulse

./: .gitignore  CLAUDE.md  README.md  docs.json  installation.mdx  pyproject.toml  quickstart.mdx
api/: pulse-registry.mdx
docs/: ARCHITECTURE.md  WHITEPAPER.md  architecture.mdx  cli-reference.mdx  contributing.mdx  fingerprint-format.mdx  first-module.mdx  how-it-works.mdx  installation.mdx  introduction.mdx  limbic.mdx  prefrontal.mdx  python-api.mdx  quickstart.mdx  registry.mdx  retina.mdx  roadmap.mdx
guides/: cli.mdx  integration.mdx  venv-setup.mdx
pulse/: __init__.py  bus.py  cli.py  fingerprint.py  limbic.py  llm.py  prefrontal.py  registry.py  retina.py  training.py
tests/: test_integration.py
